loopwhile.LoopWhile.scala.error
Erreur de compilation :
LoopWhile:1: error: value =! is not a member of Boolean
while (estFaceMur=!false) {
                 ^